Update index.html para teste

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <p>Escolha um numero para fazer a tabuada</p>
         <input type="text" id="numero"> 
         <button onclick="tabuada()">Executar</button>
+
+        <p>Teste de pull</p>
     </div>
 
 
