--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
         <p>Escolha um numero para fazer a tabuada</p>
         <input type="text" id="numero"> 
         <button onclick="tabuada()">Executar</button>
+
+        
+    </div>
+
+    <div>
+        <h3>Questão 3 - for</h3>
+        <p>Soma</p>
+        <input type="text" id="numero" placeholder="Digite um número"> 
+        <button onclick="soma()">Executar</button>
+
+        
     </div>
 
 
