fiz mais duas questoes de for

--- a/index.html
+++ b/index.html
@@ -58,8 +58,17 @@
         <h3>Questão 6 - for</h3>
         <p>Impressão de uma lista de nomes</p>
         <input type="text" id="nomes"> 
-        <button onclick="enviar()">Executar</button>
+        <button onclick="imprimir()">Executar</button>
 
+    </div>
+
+
+    <div>
+        <h3>Questão 7 - for</h3>
+        <p>Números ímpares de 1 a 30</p>
+        <input type="text" id="numeros"> 
+        <button onclick="exibirnumerosimpares()">Executar</button>
+        <div id="resultado"></div>
 
     </div>
 
