fiz duas questões de for

--- a/index.html
+++ b/index.html
@@ -67,10 +67,23 @@
         <h3>Questão 7 - for</h3>
         <p>Números ímpares de 1 a 30</p>
         <input type="text" id="numeros"> 
-        <button onclick="exibirnumerosimpares()">Executar</button>
+        <button onclick="exibirnumerosimpares()">Exibir</button>
         <div id="resultado"></div>
 
     </div>
+
+
+    <div>
+        <h3>Questão 8 - for</h3>
+        <p>Fatorial de um número</p>
+        <input type="text" id="calcularfatorial"> 
+        <button onclick="calcular()">Exibir</button>
+        <div id="resultado"></div>
+
+    </div>
+
+
+
 
 
     <script src="index.js"></script>    
